# solana-soldev

./: README.md
anchor/: README.md
anchor/anchor-counter/: .pnp.cjs  Anchor.toml  package-lock.json  package.json
anchor/anchor-counter-frontend/: .gitignore
anchor/anchor-counter-frontend/components/: Increment.tsx  Initialize.tsx
anchor/anchor-counter/tests/: anchor-counter.ts
anchor/movie-review-program/: .gitignore  .pnp.cjs  Anchor.toml
anchor/movie-review-program/programs/movie-review-program/: Cargo.toml
anchor/movie-review-program/programs/movie-review-program/src/: lib.rs
anchor/movie-review-program/tests/: movie-review-program.ts
anchor/student-program/: .gitignore  Anchor.toml
anchor/student-program/tests/: student-program.ts
client-interaction/interact-with-wallets/components/: BalanceDisplay.tsx  SendSolForm.tsx
client-interaction/interact-with-wallets/pages/: index.tsx
client-interaction/read-from-network/pages/: index.tsx
client-interaction/serialize-instructions/challenge/: package-lock.json
client-interaction/serialize-instructions/demo/: package-lock.json
client-interaction/write-to-network/: package-lock.json  package.json
client-interaction/write-to-network/src/: index.ts
native-programs/token/challenge/: package-lock.json
native-programs/token/demo/: package-lock.json  package.json
solana-programs/deserializing-instructions/challenge/: .gitignore  Cargo.toml  package-lock.json
solana-programs/hello-world/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
(+41 files in other folders)
