[package]
name = "movie-review-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "movie_review_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"

[programs.localnet]
movie_review_program = "EvyMLMUiSLkBPtuG94vbMViADdKHwKgoc4iwrJqv5Baq"
